Refactor dao: add ResourceLoaders interface, add YmlRepo, refactor CsvRepos